added description to antenna simulation playlist video on art page

--- a/art/index.html
+++ b/art/index.html
@@ -81,6 +81,16 @@
 	  <div class="option">
 		  <iframe width="100%" height="auto" src="https://www.youtube.com/embed/videoseries?list=PLo-TAH2eiryEtgEQkLjHA5jBAT0-cNPJ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	  </div>
+	  <div class="description">
+		<p align="right"> <i>electromagnetic antenna simulation playlist</i>. Blender, 2020</p>
+	  </div>
+	  
+	  <div class="option">
+	  <img src="images/carnyx_troupe_4k.jpg"/>
+	  </div>
+	  <div class="description">
+		<p align="right"> <i>carnyx troupe</i>. Blender, 2020</p>
+	  </div>
 	  
 	  <div class="option">
 		<img src="images/knifePineapple.jpg">
