added link to programming portfolio from homapge

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
     <div class="section banner">
         <div class="container">
             <div class="row">
-                <div class="one-third column">
+                <div class="one-half column">
                     <br>
                     <h1>Philip Shenk</h1>
                     <br>
                     <br>
+                    <h3><a href="portfolio">programming portfolio</a></h3>
                     <h3><a href="https://github.com/phil-shenk">github</a></h3>
                     <h3><a href="files/Philip_Shenk_Resume.pdf">physics resume</a></h3>
                     <h3><a href="art">art</a></h3>
