removed donut man from art page :/

--- a/art/index.html
+++ b/art/index.html
@@ -122,6 +122,7 @@
 	  <p align="right"> <i>voronoi chicken on snowy mount</i>. Blender, 2020</p>
 	  </div>
 	  
+	  <!-- since you made the effort to look at my html source, have a treat:
 	  <div class="option">
 	    <video autoplay loop muted playsinline>
 			<source src="images/louse_denoised.mkv"> 
@@ -130,6 +131,7 @@
 	  <div class="description">
 	  <p align="right"> <i>donut man</i>. Blender, 2019</p>
 	  </div>
+		-->
 	  
 	  <div class="option">
 		<img src="images/pitt.jpg">
