updated portfolio with brief billiard description

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>phil's art</title>
+  <title>phil's portfolio</title>
   <meta name="description" content="phil's cs portfolio webpage">
   <meta name="author" content="phil shenk">
 
@@ -44,16 +44,35 @@
     </div>
   </div>
 
-  <div class="section options darcc">
+  <div class="section darcc">
   <div class="container">
 
 		<h4>this page will contain overviews of my favorite programming projects. </h4>
 		<h4>It's still in development, so please check out my <u><a href="https://github.com/phil-shenk">github portfolio</a></u> in the meantime.</h4>
 
-		<br>
-		<br>
 		<h6><a href="https://phil-shenk.github.io">back to main page</a></h6>
-	  
+
+    <h2>Rendering billiards</h2>
+    <p>This project demonstrates the generation and texturing of spherical meshes, a simple version of the Blinn-Phong lighting model, and fake shadows.
+      The light source and the camera can be moved by the user's keyboard, and the camera can enter follow-mode to follow behind one of the billiard balls.
+      <br><br>
+      All of the linear transformations in this project make use of my linear algebra library, which can be found here: <a href="https://github.com/phil-shenk/linalglib">linalglib</a>
+    </p>
+    <div class="row">
+      <div class="four columns">
+        <img class="value-img" src="images/billiards/ball15.png">
+        closeup
+      </div>
+      <div class="four columns">
+        <img class="value-img" src="images/billiards/billiard_demo.gif">
+        animated demo
+      </div>
+      <div class="four columns">
+        <img class="value-img" src="images/billiards/side_shadow.png">
+        shadows
+      </div>
+    </div>
+
   </div>
 
 
