added portfolio entries

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,6 +99,30 @@
     </div>
 
     <div class="portfolio-element">
+      <h2>Parallel Erosion Simulation</h2>
+      <a href="https://github.com/phil-shenk/erosion">https://github.com/phil-shenk/erosion</a>
+      <p>This project simulations hydraulic erosion with thousands of raindrops. Each drop absorbs or deposits a variable amount of
+        sediment based on its speed and the slope of the terrain. The simulation makes use of python's <code>multiprocessing</code> library
+        to leverage the extra processing power of multicore machines. 
+      </p>
+      <div class="row">
+        <div class="four columns">
+          <!-- hopefully i don't move or rename these images haha -->
+          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/top_screenshot.png">
+          top view
+        </div>
+        <div class="four columns">
+          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/rotating_maze.gif">
+          animated traversal
+        </div>
+        <div class="four columns">
+          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/side_view_screenshot.png">
+          angled perspective
+        </div>
+      </div>
+    </div>
+
+    <div class="portfolio-element">
       <h2>Maze demonstration</h2>
       <a href="https://github.com/phil-shenk/maze-solver-opengl">https://github.com/phil-shenk/maze-solver-opengl</a>
       <p>This project demonstrates the generation and solving of a simple maze. After it is generated, the maze is rendered in 3D with OpenGL. The camera then moves through the maze in the order 
