added raw github img links to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,6 +104,8 @@
       <p>This project simulations hydraulic erosion with thousands of raindrops. Each drop absorbs or deposits a variable amount of
         sediment based on its speed and the slope of the terrain. The simulation makes use of python's <code>multiprocessing</code> library
         to leverage the extra processing power of multicore machines. 
+        <br>
+        The simulation is rendered in a live, interactive window using the Mayavi package for python.
       </p>
       <div class="row">
         <div class="four columns">
