updated img links in portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -60,15 +60,15 @@
       </p>
       <div class="row">
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/curve-generator-opengl/blob/main/screenshots/refined_normal_calculation.png">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/curve-generator-opengl/main/screenshots/refined_normal_calculation.png">
           interesting curve
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/curve-generator-opengl/blob/main/screenshots/high_detail_screenshot1.png">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/curve-generator-opengl/main/screenshots/high_detail_screenshot1.png">
           wobbly shape
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/curve-generator-opengl/blob/main/screenshots/spiral_screenshot.png">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/curve-generator-opengl/main/screenshots/spiral_screenshot.png">
           simple spiral
         </div>
       </div>
@@ -84,22 +84,22 @@
       </p>
       <div class="row">
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/billiards-opengl/blob/main/screenshots/ball15.png">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/billiards-opengl/main/screenshots/initial_state.png">
           closeup of ball #15
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/billiards-opengl/blob/main/screenshots/billiard_demo.gif">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/billiards-opengl/main/screenshots/billiard_demo.gif">
           light motion & rolling demo
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/billiards-opengl/blob/main/screenshots/side_shadow.png">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/billiards-opengl/main/screenshots/side_shadow.png">
           shadows demo
         </div>
       </div>
     </div>
 
     <div class="portfolio-element">
-      <h2>Parallel Erosion Simulation</h2>
+      <h2>Parallelized Erosion Simulation</h2>
       <a href="https://github.com/phil-shenk/erosion">https://github.com/phil-shenk/erosion</a>
       <p>This project simulations hydraulic erosion with thousands of raindrops. Each drop absorbs or deposits a variable amount of
         sediment based on its speed and the slope of the terrain. The simulation makes use of python's <code>multiprocessing</code> library
@@ -110,16 +110,16 @@
       <div class="row">
         <div class="four columns">
           <!-- hopefully i don't move or rename these images haha -->
-          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/top_screenshot.png">
-          top view
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/erosion/master/screenshots/square_decent.jpg">
+          hand-painted initial terrain
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/rotating_maze.gif">
-          animated traversal
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/erosion/master/screenshots/square_dense_voronoi.jpg">
+          dense voronoi initial terrain
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/side_view_screenshot.png">
-          angled perspective
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/erosion/master/screenshots/voronoi_square.jpg">
+          sparse voronoi initial terrain
         </div>
       </div>
     </div>
@@ -135,15 +135,15 @@
       <div class="row">
         <div class="four columns">
           <!-- hopefully i don't move or rename these images haha -->
-          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/top_screenshot.png">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/maze-solver-opengl/main/screenshots/top_screenshot.png">
           top view
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/rotating_maze.gif">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/maze-solver-opengl/main/screenshots/rotating_maze.gif">
           animated traversal
         </div>
         <div class="four columns">
-          <img class="value-img" src="https://github.com/phil-shenk/maze-solver-opengl/blob/main/screenshots/side_view_screenshot.png">
+          <img class="value-img" src="https://raw.githubusercontent.com/phil-shenk/maze-solver-opengl/main/screenshots/side_view_screenshot.png">
           angled perspective
         </div>
       </div>
