rephrased parametrized -> parametric

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,9 +50,9 @@
   <div class="section darcc">
   <div class="container">
     <div class="portfolio-element">
-      <h2>Parametrized Curve Renderer</h2>
+      <h2>Parametric Curve Renderer</h2>
       <a href="https://github.com/phil-shenk/curve-generator-opengl">https://github.com/phil-shenk/curve-generator-opengl</a>
-      <p>This project demonstrates the representation of an arbitrary parametrized 3D curve. The curve is defined by functions of x, y and z,
+      <p>This project demonstrates the representation of an arbitrary parametric 3D curve. The curve is defined by functions of x, y and z,
         and a 3D tube representation of the curve is generated and rendered in OpenGL. The camera can be rotated and zoomed with the mouse.
         Take a look at the repository's readme to see some of the math that goes into making the tube vertices consistent.
         <br><br>
