--- a/egg-drop-simulator/index.html
+++ b/egg-drop-simulator/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>egg-drop-simulator</title>
+    <title>Unity WebGL Player | egg-drop-simulator</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,18 +20,18 @@
         WebGL builds are not supported on mobile devices.
       </div>
       <div id="unity-footer">
-        <!--<div id="unity-webgl-logo"></div>-->
+        <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">egg-drop-simulator</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build.loader.js";
+      var loaderUrl = buildUrl + "/build2.0.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build.data",
-        frameworkUrl: buildUrl + "/build.framework.js",
-        codeUrl: buildUrl + "/build.wasm",
+        dataUrl: buildUrl + "/build2.0.data",
+        frameworkUrl: buildUrl + "/build2.0.framework.js",
+        codeUrl: buildUrl + "/build2.0.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Gumbo Systems",
         productName: "egg-drop-simulator",
@@ -53,8 +53,8 @@
           mobileWarning.style.display = "none";
         }, 5000);
       } else {
-        canvas.style.width = "1280px";
-        canvas.style.height = "720px";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
       loadingBar.style.display = "block";
 
