--- a/egg-drop-simulator/index.html
+++ b/egg-drop-simulator/index.html
@@ -17,9 +17,8 @@
         </div>
       </div>
       <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices, try on a laptop or desktop browser :( sorry
+        WebGL builds are not supported on mobile devices.
       </div>
-	  
       <div id="unity-footer">
         <!--<div id="unity-webgl-logo"></div>-->
         <div id="unity-fullscreen-button"></div>
